--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <!-- stylesheet -->
-    <link rel="stylesheet" href="src/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
-    <link rel="stylesheet" href="src/assets/css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="src/assets/css/fancybox.css" />
-    <link rel="stylesheet" href="src/assets/scss/style.css" />
+    <link rel="stylesheet" href="/src/assets/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/fancybox.css" />
+    <link rel="stylesheet" href="/src/assets/scss/style.css" />
     <!-- title page -->
     <title>PortKit</title>
 </head>
@@ -29,13 +29,13 @@
 
 
     <!-- scripts -->
-    <script src="src/assets/js/jquery-3.6.0.min.js"></script>
-    <script src="src/assets/js/bootstrap.bundle.min.js"></script>
-    <script src="src/assets/js/mixitup.min.js"></script>
-    <script src="src/assets/js/swiper-bundle.min.js"></script>
-    <script src="src/assets/js/kursor.js"></script>
-    <script src="src/assets/js/ajax-form.js"></script>
-    <script src="src/assets/js/main.js"></script>
+    <script src="/src/assets/js/jquery-3.6.0.min.js"></script>
+    <script src="/src/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/assets/js/mixitup.min.js"></script>
+    <script src="/src/assets/js/swiper-bundle.min.js"></script>
+    <script src="/src/assets/js/kursor.js"></script>
+    <script src="/src/assets/js/ajax-form.js"></script>
+    <script src="/src/assets/js/main.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 
